@@ -21,7 +21,6 @@ import java.io.IOException;
 import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.sql.*;
 import java.util.List;
 import java.util.function.Function;
@@ -328,7 +327,7 @@ class SqlDatabaseContentRetrieverIT {
 
     private static Path toPath(String fileName) {
         try {
-            return Paths.get(SqlDatabaseContentRetrieverIT.class.getClassLoader().getResource(fileName).toURI());
+            return Path.of(SqlDatabaseContentRetrieverIT.class.getClassLoader().getResource(fileName).toURI());
         } catch (URISyntaxException e) {
             throw new RuntimeException(e);
         }
