@@ -6,7 +6,7 @@ import java.net.HttpURLConnection;
 import java.net.URI;
 import java.net.URL;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.util.Collection;
@@ -176,7 +176,7 @@ public class Utils {
   public static String generateUUIDFrom(String input) {
       byte[] hashBytes = getSha256Instance().digest(input.getBytes(UTF_8));
       StringBuilder sb = new StringBuilder();
-      for (byte b : hashBytes) sb.append(String.format("%02x", b));
+      for (byte b : hashBytes) sb.append("%02x".formatted(b));
       return UUID.nameUUIDFromBytes(sb.toString().getBytes(UTF_8)).toString();
   }
 
@@ -253,7 +253,7 @@ public class Utils {
         }
       } else {
         // Handle files
-        return Files.readAllBytes(Paths.get(new URI(url)));
+        return Files.readAllBytes(Path.of(new URI(url)));
       }
     } catch (Exception e) {
       throw new RuntimeException(e);
