@@ -98,7 +98,7 @@ class Neo4jEmbeddingUtils {
     public static String sanitizeOrThrows(String value, String config) {
         return sanitize(value)
                 .orElseThrow(() -> {
-                    String invalidSanitizeValue = String.format("The value %s, to assign to configuration %s, cannot be safely quoted",
+                    String invalidSanitizeValue = "The value %s, to assign to configuration %s, cannot be safely quoted".formatted(
                             value,
                             config);
                     return new RuntimeException(invalidSanitizeValue);
