@@ -184,7 +184,7 @@ class VearchClient {
         int code = response.code();
         String body = response.errorBody().string();
 
-        String errorMessage = String.format("status code: %s; body: %s", code, body);
+        String errorMessage = "status code: %s; body: %s".formatted(code, body);
         return new RuntimeException(errorMessage);
     }
 
@@ -193,7 +193,7 @@ class VearchClient {
     }
 
     private RuntimeException toException(int code, String msg) {
-        String errorMessage = String.format("code: %s; message: %s", code, msg);
+        String errorMessage = "code: %s; message: %s".formatted(code, msg);
 
         return new RuntimeException(errorMessage);
     }
